Fixed colour contrast of comments in code samples

--- a/src/_0_styles/03-plugins/highlight.theme.atom-one-dark.scss
+++ b/src/_0_styles/03-plugins/highlight.theme.atom-one-dark.scss
@@ -23,12 +23,12 @@ hue-6-2: #e6c07b
   overflow-x: auto;
   padding: 0.5em;
   color: #abb2bf;
-  background: #282c34;
+  background: #19191b;
 }
 
 .hljs-comment,
 .hljs-quote {
-  color: #5c6370;
+  color: #A09F79;
   font-style: italic;
 }
 
