--- a/src/_1_modules/demo/demo.scss
+++ b/src/_1_modules/demo/demo.scss
@@ -56,7 +56,7 @@
 		clear: both;
 	}
 	&__markup {
-		background-color: #282c34;
+		background-color: #17191a;
 		position: relative;
 		padding-left: 40px;
 		display: flex;
